# RagaHash

./: .gitignore  README.md  demo.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: HOW_IT_WORKS.md  _config.yml  index.html
examples/: api_response_signer.py  file_integrity_monitor.py
paper/: ragahash_paper.md
ragahash/: __init__.py  __main__.py  checksum.py  core.py  music.py  raga_data.py
tests/: test_checksum.py  test_core.py  test_raga_data.py
visualizer/: app.py
visualizer/static/: raga_viz.js  style.css
visualizer/templates/: receiver.html  sender.html
